RESOLVED FIXED54148
REGRESSION (WebKit2): Opening two print dialogs causes havoc
https://bugs.webkit.org/show_bug.cgi?id=54148
Summary REGRESSION (WebKit2): Opening two print dialogs causes havoc
Alexey Proskuryakov
Reported 2011-02-09 15:05:16 PST
If you try to open two print dialogs at once (in separate windows, of course), they start blinking and updating like mad. Steps to reproduce: open two WebKit2 windows with about:blank, press Cmd+P in both. This is a WebKit2 regression caused by the way we force an asynchronous update of print preview (dispatching a print panel notification).
Attachments
proposed patch (6.37 KB, patch)
2011-02-09 15:33 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2011-02-09 15:06:19 PST
Alexey Proskuryakov
Comment 2 2011-02-09 15:33:58 PST
Created attachment 81884 [details] proposed patch
Alexey Proskuryakov
Comment 3 2011-02-09 16:25:27 PST
Note You need to log in before you can comment on or make changes to this bug.