third_party/WebKit/Source/WebKit2/UIProcess/API/mac/WKPrintingView.h
@@ -49,7 +49,6 @@ namespace WebKit {
     HashMap<uint64_t, WebCore::IntRect> _expectedPreviewCallbacks;
     uint64_t _latestExpectedPreviewCallback;
     uint64_t _expectedPrintCallback;
-    BOOL _isForcingPreviewUpdate;
 
     BOOL _isPrintingFromSecondaryThread;
     Mutex _printingCallbackMutex;
